<resources>
    <string name="app_name">Playlis Maker</string>
    <string name="main_search">Поиск</string>
    <string name="main_mediateka">Медиатека</string>
    <string name="main_settings">Настройки</string>
    <string name="settings_share">Поделиться приложением</string>
    <string name="settings_support">Написать в поддержку</string>
    <string name="settings_agreement">Пользовательское соглашение</string>
    <string name="settings_title">Настройки</string>
    <string name="search_title">Поиск</string>
    <string name="main_title_playlist_maker">Playlist maker</string>
    <string name="dark_theme">Темная тема</string>
    <string name="search">Поиск</string>
    <string name="settings_share_link_practicum">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="settings_share_email">kondratyuck.olga.1999@gmail.com</string>
    <string name="settings_share_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="settings_share_text">Спасибо за крутое приложение!</string>
    <string name="settings_share_link_agreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_error_empty">Ничего не нашлось</string>
    <string name="search_error_network">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>
    <string name="player_track_info_album">Альбом</string>
    <string name="player_track_info_time">Длительность</string>
    <string name="player_track_info_year">Год</string>
    <string name="player_track_info_genre">Жанр</string>
    <string name="player_track_info_country">Страна</string>
    <string name="player_zero_time">00:00</string>
</resources>