<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:textSize="22sp"
        app:title="@string/main_title_playlist_maker"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/main_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white_color"
        android:text="@string/main_search"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:cornerRadius="@dimen/main_button_radius"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/text_color" />

    <Button
        android:id="@+id/main_mediateka"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white_color"
        android:text="@string/main_mediateka"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:cornerRadius="@dimen/main_button_radius"
        app:icon="@drawable/ic_note"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/text_color" />

    <Button
        android:id="@+id/main_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white_color"
        android:text="@string/main_settings"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        app:cornerRadius="@dimen/main_button_radius"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/button_icon_padding"
        app:iconTint="@color/text_color" />


</LinearLayout>

