<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"


    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back"
            android:id="@+id/settings_back">

        </ImageView>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:backgroundTint="@color/white_color"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/settings_title" />

    </LinearLayout>


    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/settings_padding_vertical"
        android:paddingBottom="@dimen/settings_padding_vertical"
        android:text="Темная тема"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white_color"
        android:drawableEnd="@drawable/ic_share"
        android:gravity="start"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/settings_padding_vertical"
        android:paddingEnd="12dp"
        android:paddingBottom="@dimen/settings_padding_vertical"
        android:text="@string/settings_share"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="16sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white_color"
        android:drawableEnd="@drawable/ic_support"
        android:gravity="start"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/settings_padding_vertical"
        android:paddingEnd="12dp"
        android:paddingBottom="@dimen/settings_padding_vertical"
        android:text="@string/settings_support"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="16sp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@color/white_color"
        android:drawableEnd="@drawable/ic_arrow"
        android:gravity="start"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/settings_padding_vertical"
        android:paddingEnd="12dp"
        android:paddingBottom="@dimen/settings_padding_vertical"
        android:text="@string/settings_agreement"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="16sp"

        />


</LinearLayout>