<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/settings_toolbar"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/settings_toolbar"
        android:fontFamily="@font/ys_display_medium"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/search_title" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search_edit_text"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/shape_edit_text"
            android:drawableStart="@drawable/ic_magnifier_gray"
            android:drawablePadding="4dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="14dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/search_color"
            android:textCursorDrawable="@drawable/shape_cursor"
            app:endIconMode="clear_text" />

        <ImageView
            android:id="@+id/search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="18dp"
            android:padding="10dp"
            android:src="@drawable/ic_search_clear" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/search_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/search_error_margin_image"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/search_error_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:src="@drawable/ic_search_error_empty" />

            <TextView
                android:id="@+id/search_error_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="@dimen/search_error_margin_text"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:textColor="@color/search_error"
                android:textSize="19sp"
                tools:text="@string/search_error_network" />

            <Button
                android:id="@+id/search_error_btn"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_error_margin_btn"
                android:background="@drawable/shape_button"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/refresh"
                android:textAllCaps="false"
                android:textSize="14sp"
                app:backgroundTint="@color/search_error" />
        </LinearLayout>

    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="gone" />
</LinearLayout>