<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/settings_toolbar"
        android:fontFamily="@font/ys_display_medium"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/player_margin_common"
            tools:context=".PlayerActivity">

            <ImageView
                android:id="@+id/player_artwork"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/player_margin_common"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/player_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_common"
                android:layout_marginTop="@dimen/player_margin_common"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="2"
                android:textColor="@color/black_white_text"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/player_artwork"
                tools:text="@tools:sample/lorem/random" />

            <TextView
                android:id="@+id/player_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_common"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:fontFamily="@font/ys_display_medium"
                android:maxLines="1"
                android:textColor="@color/black_white_text"
                app:layout_constraintTop_toBottomOf="@id/player_title"
                tools:text="@tools:sample/lorem/random" />

            <ImageView
                android:id="@+id/player_btn_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/player_margin_common"
                android:src="@drawable/btn_player_queue"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_subtitle"
                app:layout_constraintTop_toTopOf="@id/player_btn_play" />

            <ImageView
                android:id="@+id/player_btn_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/player_margin_common"
                android:src="@drawable/btn_player_play"
                app:layout_constraintEnd_toStartOf="@id/player_btn_favorite"
                app:layout_constraintStart_toEndOf="@id/player_btn_add"
                app:layout_constraintTop_toBottomOf="@id/player_subtitle" />

            <ImageView
                android:id="@+id/player_btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/player_margin_common"
                android:src="@drawable/btn_player_like"
                app:layout_constraintBottom_toBottomOf="@id/player_btn_play"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_subtitle"
                app:layout_constraintTop_toTopOf="@id/player_btn_play" />

            <TextView
                android:id="@+id/player_track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/black_white_text"
                app:layout_constraintEnd_toEndOf="@id/player_btn_play"
                app:layout_constraintStart_toStartOf="@id/player_btn_play"
                app:layout_constraintTop_toBottomOf="@id/player_btn_play"
                tools:text="3:33" />

            <!-- Track info -->

            <TextView
                android:id="@+id/player_track_info_time_title"
                style="@style/PlayerInfoGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/player_margin_info_vert"
                android:text="@string/player_track_info_time"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_time" />


            <TextView
                android:id="@+id/player_track_info_time"
                style="@style/PlayerInfoBlackWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="@dimen/player_margin_info_vert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/player_track_time"
                tools:text="5:55" />


            <TextView
                android:id="@+id/player_track_info_album_title"
                style="@style/PlayerInfoGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:text="@string/player_track_info_album"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_time_title" />


            <TextView
                android:id="@+id/player_track_info_album"
                style="@style/PlayerInfoBlackWhiteText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:fontFamily="@font/ys_display_regular"
                android:gravity="end"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_track_info_album_title"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_time_title"
                tools:text="@tools:sample/lorem/random" />


            <TextView
                android:id="@+id/player_track_info_year_title"
                style="@style/PlayerInfoGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:text="@string/player_track_info_year"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_album_title" />


            <TextView
                android:id="@+id/player_track_info_year"
                style="@style/PlayerInfoBlackWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_album_title"
                tools:text="1965" />

            <TextView
                android:id="@+id/player_track_info_genre_title"
                style="@style/PlayerInfoGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:text="@string/player_track_info_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_year_title" />


            <TextView
                android:id="@+id/player_track_info_genre"
                style="@style/PlayerInfoBlackWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_year_title"
                tools:text="Rock" />

            <TextView
                android:id="@+id/player_track_info_country_title"
                style="@style/PlayerInfoGrayText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                android:text="@string/player_track_info_country"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_genre_title" />


            <TextView
                android:id="@+id/player_track_info_country"
                style="@style/PlayerInfoBlackWhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/player_margin_info_horiz"
                android:layout_marginVertical="@dimen/player_margin_info_vert"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/player_track_info_genre_title"
                tools:text="Великобритания" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>